--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
     "name": "react-native-srikandi-template",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "React Native Srikandi Template",
-    "repository": "git@github.com:egiwibowo13/react-native-srikandi-template.git",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/egiwibowo13/react-native-srikandi-template.git"
+    },
     "author": "Egi Wibowo <egiwibowo13@gmail.com>",
     "license": "MIT"
   }
