--- a/template/package.json
+++ b/template/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.6.2",
+    "@shopify/restyle": "^1.6.0",
     "axios": "^0.21.1",
     "crypto-js": "^4.1.1",
     "cuid": "^2.1.8",
